<?xml version="1.0"?>
<package format="3">
  <name>offboard_ex</name>
  <version>0.0.0</version>
  <description>An example package for offboard control using ROS2 and PX4.</description>
  <maintainer email="hwanyongb@gm.gist.ac.kr">yong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
